<resources>
    <string name="app_name">Open Weather App</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like: %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d%%</string>
    <string name="pressure">Pressure %1$d hPa</string>
    <string name="forecast">Forecast</string>
    <string name="sunrise">"Sunrise: "</string>
    <string name="sunset">"Sunset: "</string>
    <string name="temp">"Temp: "</string>
    <string name="tempHigh">"High: "</string>
    <string name="tempLow">"Low: "</string>
    <string name="zip_code">ZIP Code</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="permission">Use My Current Location</string>
    <string name="notification">Turn on notifications</string>
    <string name="turn_notification_on">Notification ON</string>
    <string name="turn_notification_off">Notification OFF</string>
    <string name="notify_location">Location: %1$s</string>
    <string name="notify_currentTemp">Current Temp: %1$d°</string>


</resources>