<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter a zip code"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/zipCode"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/zip_code"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="6dp"
        android:inputType="number" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:text="@string/permission"/>

    <Button
        android:id="@+id/notificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:text="@string/notification"/>


</LinearLayout>