<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp">

    <ImageView
        android:id="@+id/forecast_condition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/sun"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="54dp" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="end|top"
        android:paddingHorizontal="12dp"
        android:paddingTop="6dp"
        android:text="@string/sunrise"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:paddingHorizontal="12dp"
        android:paddingBottom="8dp"
        android:text="@string/sunset"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|top"
        android:paddingLeft="125dp"
        android:paddingTop="8dp"
        android:text= "@string/temp" />

    <TextView
        android:id="@+id/high"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|bottom"
        android:paddingLeft="125dp"
        android:paddingBottom="4dp"
        android:text="@string/tempHigh" />

    <TextView
        android:id="@+id/low"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="210dp"
        android:paddingTop="33dp"
        android:text="@string/tempLow" />

</androidx.constraintlayout.widget.ConstraintLayout>